name:                hangman
version:             0.1.0.0
synopsis:            Hangman
author:              Aria Fallah
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random == 1.1
                     , split == 0.2.3
